--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "zeengocorp-website"
 compatibility_date = "2024-01-01"
-pages_build_output_dir = "dist"
+pages_build_output_dir = "dist/public"
 
 [vars]
 # Environment variables will be set in the Cloudflare Dashboard
